markup html and add classes

--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,19 @@
-<header class="page__header">@@label</header>
+<header>
+  <h1 class="header__title">Buscador de Series</h1>
+  <form action="search" class="form">
+    <input
+      type="text"
+      name="searchBox"
+      class="form__input--search js-inputSearch"
+      id="searchBox"
+      placeholder="Escribe aquí tu búsqueda"
+    />
+    <input
+      type="submit"
+      name="searchButton"
+      class="form__input--submit js-searchSubmit"
+      id="searchButton"
+      placeholder="Buscar"
+    />
+  </form>
+</header>
