--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,12 @@
-<main class="page__main">@@label</main>
+<main class="main">
+  <h2 class="main__title--results">Resultados</h2>
+  <div class="main__display--results js-displayResults">
+    <ul class="js-resultList"></ul>
+  </div>
+  <aside class="main__aside--container">
+    <h2 class="main__title--favorites">Favoritos</h2>
+    <div class="main__display--favorites js-displayFavorites">
+      <ul class="js-favoritesList"></ul>
+    </div>
+  </aside>
+</main>
