--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,25 +4,13 @@
     <meta charset="UTF-8" />
     <title>Buscador de películas</title>
     <link rel="icon" href="favicon.png" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <div class="page">
-      <partial src="_header.html" label="Header"></partial>
-      <partial src="_main.html" label="Main"></partial>
-      <partial
-        src="_link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></partial>
-      <partial
-        src="_link.html"
-        aClass="link__github"
-        text="GitHub"
-        url="https://github.com"
-      ></partial>
+      <partial src="_header.html" label="Buscador"></partial>
+      <partial src="_main.html" label="Resultados Favoritos"></partial>
     </div>
-    <script type="text/javascript" src="../assets/js/main.js"></script>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
   </body>
 </html>
