Get data (name, img)from server when click event is listen

--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -2,7 +2,7 @@
   <h1 class="header__title">Buscador de Series</h1>
   <form action="search" class="form">
     <input
-      type="text"
+      type="search"
       name="searchBox"
       class="form__input--search js-inputSearch"
       id="searchBox"
@@ -12,7 +12,7 @@
       type="submit"
       name="searchButton"
       class="form__input--submit js-searchSubmit"
-      id="searchButton"
+      id="searchSubmit"
       placeholder="Buscar"
     />
   </form>
