--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Buscador de películas</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Red+Hat+Text&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
