--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <h1 class="header__title">Buscador de Series</h1>
   <form action="search" class="form">
     <input
