--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Buscador de películas</title>
+    <script src="https://kit.fontawesome.com/e67105b875.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Red+Hat+Text&display=swap"
       rel="stylesheet"
