--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,19 +1,23 @@
 <header class="header">
-  <h1 class="header__title">Buscador de Series</h1>
+  <h1 class="header__title">¡Encuentra tus series favoritas!</h1>
   <form action="search" class="form">
     <input
       type="search"
       name="searchBox"
       class="form__input--search js-inputSearch"
       id="searchBox"
-      placeholder="Escribe aquí tu búsqueda"
+      placeholder="Escribe aquí"
     />
-    <input
+    <button class="form__input--submit js-searchSubmit">
+      <i class="fas fa-search"></i>
+    </button>
+
+    <!-- <input
       type="submit"
       name="searchButton"
-      class="form__input--submit js-searchSubmit"
+      class="form__input--submit 
       id="searchSubmit"
       placeholder="Buscar"
-    />
+    /> -->
   </form>
 </header>
