--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,7 +1,9 @@
 <main class="main">
-  <h2 class="main__title--results">Resultados</h2>
-  <div class="main__display--results js-displayResults">
-    <ul class="result-list js-resultList"></ul>
+  <div class="main__results--container">
+    <h2 class="main__title--results">Resultados</h2>
+    <div class="main__display--results js-displayResults">
+      <ul class="js-resultList"></ul>
+    </div>
   </div>
   <aside class="main__aside--container">
     <h2 class="main__title--favorites">Favoritos</h2>
