save data in showCards

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -15,6 +15,6 @@
       <partial src="_header.html" label="Buscador"></partial>
       <partial src="_main.html" label="Resultados Favoritos"></partial>
     </div>
-    <script type="text/javascript" src="./assets/js/main.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html>
