paint data showCards (name+img) in results

--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -7,6 +7,7 @@
       class="form__input--search js-inputSearch"
       id="searchBox"
       placeholder="Escribe aquí"
+      value="dexter"
     />
     <button class="form__input--submit js-searchSubmit">
       <i class="fas fa-search"></i>
