--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -8,7 +8,7 @@
   <aside class="main__aside--container">
     <h2 class="main__title--favorites">Favoritos</h2>
     <div class="main__display--favorites js-displayFavorites">
-      <ul class="js-favoritesList"></ul>
+      <ul class="main__list--favorites js-favoritesList"></ul>
     </div>
   </aside>
 </main>
