paint favorites list when click on showCards

--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -10,6 +10,7 @@
       value="dexter"
     />
     <button class="form__input--submit js-searchSubmit">
+      Buscar
       <i class="fas fa-search"></i>
     </button>
   </form>
