add styles to main

--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,4 +1,5 @@
 $primary-color: #fff;
-$secondary-color: aquamarine;
+$secondary-color: rgb(54, 56, 57);
+$mark-color: #c9584c;
 
 $font: "Red Hat Text", sans-serif;
