--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,15 +1,16 @@
 <header class="header">
-  <h1 class="header__title">¡Encuentra tus series favoritas!</h1>
+  <img src="./assets/images/TV.png" alt="TV" class="header__image" />
+  <h1 class="header__title">TV SHOW Searcher</h1>
   <form action="search" class="form">
     <input
       type="search"
       name="searchBox"
       class="form__input--search js-inputSearch"
       id="searchBox"
-      placeholder="Escribe aquí"
+      placeholder="Show name here..."
     />
     <button class="form__input--submit js-searchSubmit">
-      Buscar
+      Search NOW!
       <i class="fas fa-search"></i>
     </button>
   </form>
