--- a/_src/assets/scss/layouts/_header.scss
+++ b/_src/assets/scss/layouts/_header.scss
@@ -1,11 +1,35 @@
 .header {
   background-color: $secondary-color;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 30px;
+  padding: 15px 20px 15px 20px;
+
+  &__image {
+    height: 100px;
+  }
 
   &__title {
     font-family: $font;
+    color: $primary-color;
+    font-size: 40px;
+  }
+}
+
+.form {
+  background-color: $primary-color;
+  border-radius: 5px 25px 5px 25px;
+  padding-left: 15px;
+
+  &__input--search {
+    border-style: none;
+    padding: 5px 0 5px 5px;
+  }
+  &__input--submit {
+    background-color: gainsboro;
+    border-radius: 0px 25px 5px 0;
+    padding: 20px 25px 20px 25px;
+    z-index: 1;
+    font-weight: bolder;
   }
 }
