--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,8 +1,8 @@
 <main class="main">
   <div class="main__results--container">
-    <h2 class="main__title--results">YOUR RESULTS</h2>
+    <h2 class="main__title--results">Results</h2>
     <div class="main__display--results js-displayResults">
-      <ul class="js-resultList"></ul>
+      <ul class="result js-resultList"></ul>
     </div>
   </div>
   <aside class="main__aside--container">
@@ -10,7 +10,7 @@
       <i class="fas fa-heart"></i>Favorites
     </h2>
     <div class="main__display--favorites js-displayFavorites">
-      <ul class="main__list--favorites js-favoritesList"></ul>
+      <ul class="favorites js-favoritesList"></ul>
     </div>
   </aside>
 </main>
